fix(timeline): align notification correctly

--- a/modules/_notifications.scss
+++ b/modules/_notifications.scss
@@ -178,10 +178,16 @@ div:not(.simple-notifications) > .notification{
         }
     }
     .content {
-        float: none;
-        width: 100%;
-		padding: 0;
-		margin: 20px 0;
+      float: none;
+      width: 100%;
+      padding: 0;
+      margin: 20px 0;
+      display: flex;
+      align-items: center;
+      a[href*="userbook"] {
+        font-size: 18px;
+        font-weight: bold;
+      }
     }
 	i.sticker.app {
 		position: absolute;
